Fixed a display bug with flash messages.
They would take too much space on mobile. They're now constrained to
the main container width, which was what was intended in the first place.

--- a/web/ui/styles/layout.scss
+++ b/web/ui/styles/layout.scss
@@ -185,5 +185,6 @@
 
   .layout-content {
     @apply bg-transparent mx-6 my-8;
+    @apply relative;
   }
 }
